syntax = "proto3";

package proto;

option go_package = "github.com/sergalkin/gophkeeper/api/proto";

message CreateSecretRequest {
    string title = 1;
    string type = 2;
    bytes content = 3;
}

message CreateSecretResponse {
    string title = 1;
    uint32 type = 2;
}

message GetSecretRequest {
    string title = 1;
}

message GetSecretResponse {
    string title = 1;
    uint32 type = 2;
    bytes content = 3;
}


service Secret {
    rpc CreateSecret (CreateSecretRequest) returns (CreateSecretResponse);
    rpc GetSecret (GetSecretRequest) returns (GetSecretResponse);
}